# wuwei

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  wuwei-pi.md  wuwei.json
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
deploy/cloud/: wuwei.json  wuwei.service
scripts/: native-build.bat  native-build.ps1  package-cloud.ps1  package-cloud.sh
wuwei-core/: build.gradle  gradle.properties  settings.gradle
wuwei-pi/: package.json  tsconfig.json
wuwei-pi/src/: logger.ts  server.ts  utils.ts
wuwei-pi/src/handlers/: ai-ask.ts  drift.ts  generate.ts  memory-summary.ts  repair.ts
wuwei-pi/src/prompts/: wuwei.ts
wuwei-renderer/: .env.development  .env.production  FRONTEND_CHANGES.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
wuwei-renderer/src/: App.tsx  bridge.ts  index.css  kernel.ts  main.tsx  vite-env.d.ts
wuwei-renderer/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
wuwei-renderer/src-tauri/capabilities/: default.json
wuwei-renderer/src-tauri/icons/: _icon.ico.bak  icon.icns
wuwei-renderer/src-tauri/src/: main.rs
wuwei-renderer/src/components/: LogViewer.tsx  SkillPanel.tsx  SkillsPage.tsx  SystemMonitor.tsx  SystemPage.tsx  WelcomeScreen.tsx  WuweiChat.tsx  WwBlogSidebar.tsx  WwBlogToc.tsx  WwChat.tsx  WwFloatingMenu.tsx  WwGateDialog.tsx  WwIntent.tsx  WwLoading.tsx  WwModelConfig.tsx  WwNavbar.tsx  WwResizableLayout.tsx  WwShell.tsx  WwSidebar.tsx  WwTerminal.tsx  WwTitleBar.tsx  (+3 more)
wuwei-shell/binaries/: wuwei.json
(+222 files in other folders)
