[package]
name = "wuwei-shell"
version = "0.0.1-beta"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
